re work file added

--- a/index.html
+++ b/index.html
@@ -116,10 +116,9 @@
     </ul>
     
     <div class="grid-container">
-      <a target="_blank" href="Assets/coll (9).jpeg">
-        <a href="product.html"></a>
+      
       </a>
-      <div class="grid-item"><img src="./Assets/coll (9).jpeg" alt=""></div>
+      <div class="grid-item"><a href="./product.html"><img src="./Assets/coll (9).jpeg" alt=""></a></div>
       <div class="grid-item"><img src="./Assets/coll (9).jpeg" alt=""></div>
       <div class="grid-item"><img src="./Assets/coll (9).jpeg" alt=""></div>  
       <div class="grid-item"><img src="./Assets/coll (9).jpeg" alt=""></div>
