--- a/index.html
+++ b/index.html
@@ -208,3 +208,9 @@
 
  </div>
  </footer>
+</div>
+</section>
+</div>
+<script src="./Assets/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
